// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustomerCard > Snapshot > matches snapshot in compact mode 1`] = `
<div
  class="flex items-center justify-between p-3 bg-surface-50 rounded-lg hover:bg-surface-100 cursor-pointer transition-colors group"
>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="w-2 h-2 rounded-full bg-emerald-500"
    />
    <div>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="font-medium text-white"
        >
          某某科技
        </span>
        <div
          class="text-xs bg-emerald-500/20 text-emerald-400 border-emerald-500/30"
          data-testid="badge"
        >
          A
          级
        </div>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        软件开发
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-3"
  >
    <div
      class="text-xs"
      data-testid="badge"
    >
      3
      个商机
    </div>
    <svg
      class="w-4 h-4 text-slate-500 group-hover:text-white transition-colors"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
</div>
`;

exports[`CustomerCard > Snapshot > matches snapshot in normal mode 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border border-white/5 p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 cursor-pointer transition-all"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-10 h-10 rounded-lg bg-gradient-to-br from-primary/20 to-primary/5 flex items-center justify-center"
      >
        <svg
          class="w-5 h-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </div>
      <div>
        <div
          class="flex items-center gap-2"
        >
          <h3
            class="font-semibold text-white"
          >
            某某科技
          </h3>
          <div
            class="text-xs bg-emerald-500/20 text-emerald-400 border-emerald-500/30"
            data-testid="badge"
          >
            A
            级
          </div>
        </div>
        <p
          class="text-xs text-slate-400"
        >
          某某科技有限公司
        </p>
      </div>
    </div>
    <button
      class="h-8 w-8"
      type="button"
    >
      <svg
        class="w-4 h-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
    </button>
  </div>
  <div
    class="space-y-2 mb-3"
  >
    <div
      class="flex items-center gap-2 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        北京市海淀区
      </span>
      <span
        class="text-slate-600"
      >
        |
      </span>
      <span>
        软件开发
      </span>
    </div>
    <div
      class="flex items-center gap-2 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        张三
      </span>
      <span
        class="text-slate-500"
      >
        · 
        138****1234
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <div
      class="text-xs"
      data-testid="badge"
    >
      VIP
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      战略合作
    </div>
  </div>
  <div
    class="grid grid-cols-3 gap-2 pt-3 border-t border-white/5"
  >
    <div
      class="text-center"
    >
      <div
        class="text-xs text-slate-400"
      >
        累计金额
      </div>
      <div
        class="text-sm font-semibold text-white"
      >
        ¥
        500
        万
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="text-xs text-slate-400"
      >
        待回款
      </div>
      <div
        class="text-sm font-semibold text-amber-400"
      >
        ¥
        100
        万
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="text-xs text-slate-400"
      >
        项目数
      </div>
      <div
        class="text-sm font-semibold text-white"
      >
        8
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between mt-3 pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        上次联系: 
        2024-01-15
      </span>
    </div>
    <div
      class="w-2 h-2 rounded-full bg-emerald-500"
      title="活跃"
    />
  </div>
</div>
`;

exports[`CustomerCard > Snapshot > matches snapshot with warning 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 cursor-pointer transition-all border-amber-500/30"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="w-10 h-10 rounded-lg bg-gradient-to-br from-primary/20 to-primary/5 flex items-center justify-center"
      >
        <svg
          class="w-5 h-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        />
      </div>
      <div>
        <div
          class="flex items-center gap-2"
        >
          <h3
            class="font-semibold text-white"
          >
            某某科技
          </h3>
          <div
            class="text-xs bg-emerald-500/20 text-emerald-400 border-emerald-500/30"
            data-testid="badge"
          >
            A
            级
          </div>
          <svg
            class="w-4 h-4 text-amber-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          />
        </div>
        <p
          class="text-xs text-slate-400"
        >
          某某科技有限公司
        </p>
      </div>
    </div>
    <button
      class="h-8 w-8"
      type="button"
    >
      <svg
        class="w-4 h-4 text-slate-400"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
    </button>
  </div>
  <div
    class="space-y-2 mb-3"
  >
    <div
      class="flex items-center gap-2 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        北京市海淀区
      </span>
      <span
        class="text-slate-600"
      >
        |
      </span>
      <span>
        软件开发
      </span>
    </div>
    <div
      class="flex items-center gap-2 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        张三
      </span>
      <span
        class="text-slate-500"
      >
        · 
        138****1234
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <div
      class="text-xs"
      data-testid="badge"
    >
      VIP
    </div>
    <div
      class="text-xs"
      data-testid="badge"
    >
      战略合作
    </div>
  </div>
  <div
    class="grid grid-cols-3 gap-2 pt-3 border-t border-white/5"
  >
    <div
      class="text-center"
    >
      <div
        class="text-xs text-slate-400"
      >
        累计金额
      </div>
      <div
        class="text-sm font-semibold text-white"
      >
        ¥
        500
        万
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="text-xs text-slate-400"
      >
        待回款
      </div>
      <div
        class="text-sm font-semibold text-amber-400"
      >
        ¥
        100
        万
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="text-xs text-slate-400"
      >
        项目数
      </div>
      <div
        class="text-sm font-semibold text-white"
      >
        8
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between mt-3 pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        class="w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
      />
      <span>
        上次联系: 
        2024-01-15
      </span>
    </div>
    <div
      class="w-2 h-2 rounded-full bg-emerald-500"
      title="活跃"
    />
  </div>
</div>
`;
